--- a/drifter-project-m36.cabal
+++ b/drifter-project-m36.cabal
@@ -32,7 +32,7 @@ library
     bytestring,
     containers,
     drifter,
-    project-m36 >= 0.2 && < 0.3,
+    project-m36 == 0.3.*,
     text,
     time,
     vector
